# tiny-note-backend

./: .env.example  .gitignore  Cargo.toml  README.md  prompt.md
src/: config.rs  demo.rs  main.rs
src/db/: mysql.rs  redis.rs
src/middleware/: auth_middleware.rs  logging.rs  mod.rs
src/models/: note.rs  user.rs
src/routes/: auth.rs  mod.rs  notes.rs
src/services/: auth_service.rs  note_service.rs
src/utils/: jwt.rs  password.rs
static/: README.md
